test/files/neg/t10507.check
Test_2.scala:2: error: self constructor invocation must refer to a constructor definition which precedes it, to prevent infinite cycles
  Macros_1.seq
           ^
1 error
